Revert "downgrade tests to java 11"
This reverts commit 05f9222a574bdef34e6c9908df8f9a2d3a5fe0c3.